--- a/Minesweeper/Properties/Resources.resx
+++ b/Minesweeper/Properties/Resources.resx
@@ -160,4 +160,7 @@
   <data name="countbomb" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\countbomb.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="after_blank2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\after_blank2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
